manifests/002-httpd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  labels:
    name: httpd
spec:
  type: ClusterIP
  selector:
    app: httpd
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
