manifests/003-httpd-route.yml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-route
spec:
  host: http-dev.apps.nord.nord.home 
  port:
    targetPort: 80
  to:
    kind: Service
    name: httpd-service
